[package]
name = "rust-bobo"
version = "0.1.0"
authors = ["cryptex"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tokio = { version = "1", features = ["full"] }
songbird = "0.1"
reqwest = "0.11"
image = "0.23"
photon-rs = "0.3"
eval = "0.4"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "collector",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "voice",
    "rustls_backend",
]
version = "0.10"
