[package]
name = "rust-bobo"
version = "1.0.0"
authors = ["cryptex"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-futures = "0.2"
tokio = { version = "1", features = ["full"] }
songbird = "0.1"
reqwest = "0.11"
image = "0.23"
photon-rs = "0.3"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
eval = "0.4"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = false
features = [
    "builder",
    "cache",
    "collector",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "voice",
    "rustls_backend",
    "unstable_discord_api",
]
# version = "0.10"

[patch.crates-io.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"


[profile.release]
lto = "thin"
